--- a/bootstrap-3.3.7-dist/购物车checked全选bug.html
+++ b/bootstrap-3.3.7-dist/购物车checked全选bug.html
@@ -81,6 +81,7 @@
 
     </div>
     <div>全选<input type="checkbox" class='select_all'></div>
+    总数量:<div class='totalnum'></div>总价格:<span class="totalPrice"></span>
 
 </body>
 
