--- a/bootstrap-3.3.7-dist/购物车checked全选bug.html
+++ b/bootstrap-3.3.7-dist/购物车checked全选bug.html
@@ -33,6 +33,11 @@
         .select_all {
             margin-top: 20px;
         }
+
+        .delete {
+            margin-top: 5px;
+            margin-left: 50px;
+        }
     </style>
 </head>
 
@@ -49,6 +54,7 @@
                         <input type="text" class="number" value="1">
                         <button class="increse">+</button>
                         <span class="sum">￥12.6</span>
+                        <span class="delete">删除</span>
                     </div>
                 </div>
             </li>
@@ -61,6 +67,7 @@
                         <input type="text" class="number" value="2">
                         <button class="increse">+</button>
                         <span class="sum">￥20</span>
+                        <span class="delete">删除</span>
                     </div>
                 </div>
             </li>
@@ -73,6 +80,7 @@
                         <input type="text" class="number" value="3">
                         <button class="increse">+</button>
                         <span class="sum">￥60</span>
+                        <span class="delete">删除</span>
                     </div>
                 </div>
             </li>
