--- a/bootstrap-3.3.7-dist/购物车checked全选bug.html
+++ b/bootstrap-3.3.7-dist/购物车checked全选bug.html
@@ -16,12 +16,12 @@
         ul li {
             margin-top: 10px;
             list-style: none;
-            width: 200px;
-            height: 30px;
+            width: 270px;
+            height: 50px;
         }
 
         ul li input {
-            margin-left: 10px;
+
             width: 30px;
         }
 
@@ -35,8 +35,30 @@
         }
 
         .delete {
-            margin-top: 5px;
-            margin-left: 50px;
+            display: inline-block;
+            margin-left: 20px;
+            color: red;
+
+        }
+
+        .background {
+
+            background: rgb(240, 157, 157);
+        }
+
+        .increse {
+            padding: 0 5px;
+        }
+
+        .decrese {
+            padding: 0 5px;
+        }
+
+        .sum {
+            display: inline-block;
+            width: 70px;
+            background-color: aquamarine;
+
         }
     </style>
 </head>
